<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2"
      android:background="@color/header_color" >




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/shiftdetails"
        android:id="@+id/textView2"
       android:layout_gravity="center"
        android:paddingTop="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/name"
          android:paddingTop="30dp"
            android:paddingLeft="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shift"
            android:id="@+id/starttime"
            android:paddingTop="10dp"
            android:paddingLeft="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shift"
            android:id="@+id/shift"
            android:paddingTop="10dp"
            android:paddingLeft="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicleid"
            android:id="@+id/vehid"
            android:paddingTop="10dp"
            android:paddingLeft="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/startshift"
            android:id="@+id/startshift"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

    </LinearLayout>



</RelativeLayout>